--- a/lists.html
+++ b/lists.html
@@ -137,6 +137,7 @@
     </div>
     <div class="guest-grid">
       <!-- Example guest cards -->
+    <a href="#1" style="text-decoration:none; color:inherit;">
       <div class="guest-card">
         <img src="photos/jerry.jpg" alt="Guest Photo">
         <div class="info">
@@ -320,12 +321,56 @@
         <a href="#" class="close">Close</a>
       </div>
     </div>
-  
+  #JERRY
+  <div id="1" class="modal">
+    <div class="modal-content">
+      <div class="language-switch">
+        <button onclick="switchLang('en', this)">EN</button>
+        <button onclick="switchLang('ru', this)">RU</button>
+      </div>
+
+      <div class="en">
+        <h2>Jerry</h2>
+
+        <p><strong>Guest</strong></p>
+
+        <p>
+        Jerry is a polite and kind-hearted person who is always respectful toward
+        others. He values friendship, honesty, and personal growth.
+        </p>
+
+        <p>
+        He studies at a prestigious school, where he is known for his good manners
+        and dedication to learning.
+        </p>
+
+        <p><strong>Phone:</strong>unknown</p>
+        </div>
+        <div class="ru" style="display:none;">
+          <h2>Джери</h2>
+
+            <p><strong>Гость</strong></p>
+
+            <p>
+            Джерри — вежливый и добросердечный человек, который всегда уважительно относится к другим. Он ценит дружбу, честность и личностный рост.
+            </p>
+
+            <p>
+            Он учится в престижной школе, где его знают за хорошие манеры и преданность учебе.
+            </p>
+
+            <p><strong>Телефон:</strong>неизвестно</p>
+
+        </div>
+        <a href="#" class="close">Close</a>
+      </div>
+    </div>
   <script src="js/language-switch.js"></script>
 
 </body>
 
 </html>
+
 
 
 
