--- a/lists.html
+++ b/lists.html
@@ -137,7 +137,7 @@
     </div>
     <div class="guest-grid">
       <!-- Example guest cards -->
-    <a href="#1" style="text-decoration:none; color:inherit;">
+    <a href="#1" >
       <div class="guest-card">
         <img src="photos/jerry.jpg" alt="Guest Photo">
         <div class="info">
@@ -370,6 +370,7 @@
 </body>
 
 </html>
+
 
 
 
