--- a/lists.html
+++ b/lists.html
@@ -146,6 +146,7 @@
       </div>
       </div>
       </a>
+      <a href="#2" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/abdulaziz.jpg" alt="Guest Photo">
         <div class="info">
@@ -153,6 +154,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#3" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/sultan.jpg" alt="Guest Photo">
         <div class="info">
@@ -160,6 +163,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#4" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/Abubakr.jpg" alt="Guest Photo">
         <div class="info">
@@ -167,6 +172,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#5" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/Abdullo.jpg" alt="Guest Photo">
         <div class="info">
@@ -174,6 +181,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#6" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/alisher.jpg" alt="Guest Photo">
         <div class="info">
@@ -181,6 +190,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#7" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/asad.jpg" alt="Guest Photo">
         <div class="info">
@@ -188,6 +199,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#8" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/shahrom.jpg" alt="Guest Photo">
         <div class="info">
@@ -195,6 +208,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#9" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/sipar.jpg" alt="Guest Photo">
         <div class="info">
@@ -202,6 +217,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#10" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/beha.jpg" alt="Guest Photo">
         <div class="info">
@@ -209,6 +226,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#11" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/dior.jpg" alt="Guest Photo">
         <div class="info">
@@ -216,6 +235,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#12" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/Odil.jpg" alt="Guest Photo">
         <div class="info">
@@ -223,6 +244,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#13" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/imron.jpg" alt="Guest Photo">
         <div class="info">
@@ -230,6 +253,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#14" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/imron1.jpg" alt="Guest Photo">
         <div class="info">
@@ -237,6 +262,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#15" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/behruzz.jpg" alt="Guest Photo">
         <div class="info">
@@ -244,6 +271,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#16" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/ahmad.jpg" alt="Guest Photo">
         <div class="info">
@@ -251,6 +280,8 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
+      <a href="#17" style="text-decoration:none; color:inherit;" >
       <div class="guest-card">
         <img src="photos/manucher.jpg" alt="Guest Photo">
         <div class="info">
@@ -258,6 +289,7 @@
           <div class="position">Guest</div>
         </div>
       </div>
+      </a>
     
       <!-- Repeat for 25 guests -->
       <!-- You can copy-paste the above guest-card block and update the content -->
@@ -366,11 +398,185 @@
         <a href="#" class="close">Close</a>
       </div>
     </div>
+  #Abdulaziz
+  <div id="2" class="modal">
+    <div class="modal-content">
+      <div class="language-switch">
+        <button onclick="switchLang('en', this)">EN</button>
+        <button onclick="switchLang('ru', this)">RU</button>
+      </div>
+
+      <div class="en">
+        <h2>Abdulaziz</h2>
+
+        <p><strong>Guest</strong></p>
+
+        <p>
+        Abdulaziz is a dedicated and disciplined individual who always takes
+        responsibility for his actions. He is respected by his peers and teachers.
+        </p>
+
+        <p>
+        As a student of a prestigious school, he focuses on both academic success
+        and personal development, aiming to become a strong and educated leader.
+        </p>
+        <p><strong>Phone:</strong>111999009</p>
+        </div>
+        <div class="ru" style="display:none;">
+          <h2>Абдулазиз</h2>
+
+            <p><strong>Гость</strong></p>
+
+            <p>
+            Абдулазиз — целеустремлённый и дисциплинированный человек, который всегда несёт ответственность за свои действия. Его уважают сверстники и преподаватели.
+            </p>
+
+            <p>
+           Будучи учеником престижной школы, он сосредоточен как на академических успехах, так и на личностном развитии, стремясь стать сильным и образованным лидером.
+            </p>
+
+            <p><strong>Телефон:</strong>111999009</p>
+
+        </div>
+        <a href="#" class="close">Close</a>
+      </div>
+    </div>
+    #Sultan Waleed
+  <div id="3" class="modal">
+    <div class="modal-content">
+      <div class="language-switch">
+        <button onclick="switchLang('en', this)">EN</button>
+        <button onclick="switchLang('ru', this)">RU</button>
+      </div>
+
+      <div class="en">
+        <h2>Sultan Waleed</h2>
+
+        <p><strong>Guest</strong></p>
+
+        <p>
+        Sultan is known for his positive energy and ability to inspire people
+        around him. He always brings a good atmosphere wherever he goes.
+        </p>
+
+        <p>
+        He studies at a prestigious school and actively works on improving
+        his knowledge, mindset, and future goals.
+        </p>
+        <p><strong>Phone:</strong>770003328</p>
+        </div>
+        <div class="ru" style="display:none;">
+          <h2>Султан Валид</h2>
+
+            <p><strong>Гость</strong></p>
+
+            <p>
+            Султан известен своей позитивной энергией и способностью вдохновлять окружающих. Он всегда создаёт хорошую атмосферу, куда бы ни пошёл.
+            </p>
+
+            <p>
+             Он учится в престижной школе и активно работает над улучшением своих знаний, мышления и будущих целей.
+            </p>
+
+            <p><strong>Телефон:</strong>770003328</p>
+
+        </div>
+        <a href="#" class="close">Close</a>
+      </div>
+    </div>
+      #Abubakr
+  <div id="4" class="modal">
+    <div class="modal-content">
+      <div class="language-switch">
+        <button onclick="switchLang('en', this)">EN</button>
+        <button onclick="switchLang('ru', this)">RU</button>
+      </div>
+
+      <div class="en">
+        <h2>Abubakr D.</h2>
+
+        <p><strong>Guest</strong></p>
+
+        <p>
+        Abubakr is a thoughtful and well-educated person who values discipline
+        and good character.
+        </p>
+
+        <p>
+        He is a student at a prestigious school and is known for his respectful
+        attitude toward teachers and peers.
+        </p>
+        <p><strong>Phone:</strong>001772009</p>
+        </div>
+        <div class="ru" style="display:none;">
+          <h2>Абубакр Д.</h2>
+
+            <p><strong>Гость</strong></p>
+
+            <p>
+            Абубакр — вдумчивый и образованный человек, который ценит дисциплину и хорошие моральные качества.
+            </p>
+
+            <p>
+             Он учится в престижной школе и известен своим уважительным отношением к учителям и сверстникам.
+            </p>
+
+            <p><strong>Телефон:</strong>001772009</p>
+
+        </div>
+        <a href="#" class="close">Close</a>
+      </div>
+    </div>
+        #Abdullo
+  <div id="5" class="modal">
+    <div class="modal-content">
+      <div class="language-switch">
+        <button onclick="switchLang('en', this)">EN</button>
+        <button onclick="switchLang('ru', this)">RU</button>
+      </div>
+
+      <div class="en">
+        <h2>Abdullo H.</h2>
+
+        <p><strong>Guest</strong></p>
+
+        <p>
+        Abdullo is calm, polite, and highly respectful. He prefers meaningful
+        conversations and positive communication.
+        </p>
+
+        <p>
+        He studies at a prestigious school and shows strong dedication to his
+        education and personal growth.
+        </p>
+        <p><strong>Phone:</strong>905877777</p>
+        </div>
+        <div class="ru" style="display:none;">
+          <h2>Абдулло Х.</h2>
+
+            <p><strong>Гость</strong></p>
+
+            <p>
+            Абдулло спокоен, вежлив и очень уважителен. Он предпочитает содержательные беседы и позитивное общение.
+            </p>
+
+            <p>
+             Он учится в престижной школе и демонстрирует высокую преданность своему образованию и личностному развитию.
+            </p>
+
+            <p><strong>Телефон:</strong>905877777</p>
+
+        </div>
+        <a href="#" class="close">Close</a>
+      </div>
+    </div>
+  
   <script src="js/language-switch.js"></script>
 
 </body>
 
 </html>
+
 
 
 
