--- a/lists.html
+++ b/lists.html
@@ -926,7 +926,7 @@
         He studies at a prestigious school and shows strong dedication to his
         education and personal growth.
         </p>
-        <p><strong>Phone:</strong>unknown</p>
+        <p><strong>Phone:</strong>906360660</p>
         </div>
         <div class="ru" style="display:none;">
           <h2>Имрон Н.</h2>
@@ -941,7 +941,7 @@
              Он учится в престижной школе и демонстрирует высокую преданность своему образованию и личностному развитию.
             </p>
 
-            <p><strong>Телефон:</strong>неизвестный</p>
+            <p><strong>Телефон:</strong>906360660</p>
 
         </div>
         <a href="#" class="close">Close</a>
@@ -1100,6 +1100,7 @@
 </body>
 
 </html>
+
 
 
 
