--- a/lists.html
+++ b/lists.html
@@ -377,7 +377,7 @@
         and dedication to learning.
         </p>
 
-        <p><strong>Phone:</strong>unknown</p>
+        <p><strong>Telegram:</strong>@En2och</p>
         </div>
         <div class="ru" style="display:none;">
           <h2>Джери</h2>
@@ -392,7 +392,7 @@
             Он учится в престижной школе, где его знают за хорошие манеры и преданность учебе.
             </p>
 
-            <p><strong>Телефон:</strong>неизвестно</p>
+            <p><strong>Телеграм:</strong>@En2och</p>
 
         </div>
         <a href="#" class="close">Close</a>
@@ -1008,7 +1008,7 @@
         <p>
         He studies at a prestigious school and works hard to achieve his goals.
         </p>
-        <p><strong>Phone:</strong>unknown</p>
+        <p><strong>Phone:</strong>975297878</p>
         </div>
         <div class="ru" style="display:none;">
           <h2>Ахмад К.</h2>
@@ -1023,7 +1023,7 @@
              Он учится в престижной школе и усердно работает для достижения своих целей.
             </p>
 
-            <p><strong>Телефон:</strong>неизвестно</p>
+            <p><strong>Телефон:</strong>975297878</p>
 
         </div>
         <a href="#" class="close">Close</a>
@@ -1076,6 +1076,7 @@
 </body>
 
 </html>
+
 
 
 
