--- a/lists.html
+++ b/lists.html
@@ -142,7 +142,7 @@
         <img src="photos/jerry.jpg" alt="Guest Photo">
         <div class="info">
           <div class="name">Jerry</div>
-          <div class="position">Guest</div>
+          <div class="position">Guest ✅</div>
       </div>
       </div>
       </a>
@@ -151,7 +151,7 @@
         <img src="photos/abdulaziz.jpg" alt="Guest Photo">
         <div class="info">
           <div class="name">Abdulaziz</div>
-          <div class="position">Guest</div>
+          <div class="position">Guest ✅</div>
         </div>
       </div>
       </a>
@@ -160,7 +160,7 @@
         <img src="photos/sultan.jpg" alt="Guest Photo">
         <div class="info">
           <div class="name">Sultan Waleed</div>
-          <div class="position">Guest</div>
+          <div class="position">Guest ✅</div>
         </div>
       </div>
       </a>
@@ -169,7 +169,7 @@
         <img src="photos/Abubakr.jpg" alt="Guest Photo">
         <div class="info">
           <div class="name">Abubakr</div>
-          <div class="position">Guest</div>
+          <div class="position">Guest ✅</div>
         </div>
       </div>
       </a>
@@ -178,7 +178,7 @@
         <img src="photos/Abdullo.jpg" alt="Guest Photo">
         <div class="info">
           <div class="name">Abdullo</div>
-          <div class="position">Guest</div>
+          <div class="position">Guest ✅</div>
         </div>
       </div>
       </a>
@@ -187,7 +187,7 @@
         <img src="photos/alisher.jpg" alt="Guest Photo">
         <div class="info">
           <div class="name">Alisher</div>
-          <div class="position">Guest</div>
+          <div class="position">Guest ✅</div>
         </div>
       </div>
       </a>
@@ -196,7 +196,7 @@
         <img src="photos/asad.jpg" alt="Guest Photo">
         <div class="info">
           <div class="name">Asad</div>
-          <div class="position">Guest</div>
+          <div class="position">Guest ✅</div>
         </div>
       </div>
       </a>
@@ -205,7 +205,7 @@
         <img src="photos/shahrom.jpg" alt="Guest Photo">
         <div class="info">
           <div class="name">Shahrom</div>
-          <div class="position">Guest</div>
+          <div class="position">Guest ✅</div>
         </div>
       </div>
       </a>
@@ -214,7 +214,7 @@
         <img src="photos/sipar.jpg" alt="Guest Photo">
         <div class="info">
           <div class="name">Sipar</div>
-          <div class="position">Guest</div>
+          <div class="position">Guest ✅</div>
         </div>
       </div>
       </a>
@@ -241,7 +241,7 @@
         <img src="photos/Odil.jpg" alt="Guest Photo">
         <div class="info">
           <div class="name">Odil</div>
-          <div class="position">Guest</div>
+          <div class="position">Guest ✅</div>
         </div>
       </div>
       </a>
@@ -259,7 +259,7 @@
         <img src="photos/imron1.jpg" alt="Guest Photo">
         <div class="info">
           <div class="name">Imron</div>
-          <div class="position">Guest</div>
+          <div class="position">Guest ✅</div>
         </div>
       </div>
       </a>
@@ -268,7 +268,7 @@
         <img src="photos/behruzz.jpg" alt="Guest Photo">
         <div class="info">
           <div class="name">Behruz</div>
-          <div class="position">Guest</div>
+          <div class="position">Guest ✅</div>
         </div>
       </div>
       </a>
@@ -277,7 +277,7 @@
         <img src="photos/ahmad.jpg" alt="Guest Photo">
         <div class="info">
           <div class="name">Ahmad</div>
-          <div class="position">Guest</div>
+          <div class="position">Guest ✅</div>
         </div>
       </div>
       </a>
@@ -1028,6 +1028,7 @@
 </body>
 
 </html>
+
 
 
 
